# ibkr-flex-statement-rs

./: Cargo.toml  LICENSE  README.md
src/: account_info.rs  asset_category.rs  cash_report.rs  currency.rs  equity_summary.rs  fifo_performance_summary.rs  lib.rs  net_stock_position.rs  node_utils.rs  open_position.rs  statement_section.rs  time_utils.rs  trade.rs
tests/: tests.rs
tests/fixtures/: mod.rs
