[package]
name = "ibkr-flex-statement"
version = "0.3.2"
edition = "2024"
license = "MIT"
description = "Parser for InteractiveBrokers (IBKR) Flex-based query response XML broker statements."
homepage = "https://github.com/tfiala/ibkr-flex-statement-rs"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
chrono-tz = "0.10.3"
roxmltree = "0.20.0"
