[package]
name = "ibkr-flex-statement"
version = "0.3.6"
edition = "2024"
license = "MIT"
description = "Parser for InteractiveBrokers (IBKR) Flex-based query response XML broker statements."
homepage = "https://github.com/tfiala/ibkr-flex-statement-rs"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
chrono-tz = "0.10.3"
roxmltree = "0.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
rstest = "0.25.0"
tracing-test = "0.2.5"
version-sync = "0.9.5"
